crates/backyard-parser/tests/snapshots/traituse__basic.snap
---
source: crates/backyard-parser/tests/traituse.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: class
    inheritance: ~
    name:
      node_type: identifier
      name: A
      loc:
        start:
          line: 1
          column: 6
          offset: 6
        end:
          line: 1
          column: 7
          offset: 7
      leadings: []
      trailings: []
    extends: ~
    implements: []
    body:
      node_type: block
      statements:
        - node_type: trait_use
          traits:
            - node_type: identifier
              name: Ale
              loc:
                start:
                  line: 1
                  column: 14
                  offset: 14
                end:
                  line: 1
                  column: 17
                  offset: 17
              leadings: []
              trailings: []
          adaptations: []
          loc:
            start:
              line: 1
              column: 10
              offset: 10
            end:
              line: 1
              column: 14
              offset: 14
          leadings: []
          trailings: []
      loc:
        start:
          line: 1
          column: 8
          offset: 8
        end:
          line: 1
          column: 19
          offset: 19
      leadings: []
      trailings: []
    is_readonly: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 19
        offset: 19
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 19
    offset: 19
leadings: []
trailings: []
