crates/backyard-parser/tests/snapshots/traituse__items.snap
---
source: crates/backyard-parser/tests/traituse.rs
assertion_line: 22
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: class
    inheritance: ~
    name:
      node_type: identifier
      name: A
      loc:
        start:
          line: 1
          column: 6
          offset: 6
        end:
          line: 1
          column: 7
          offset: 7
      leadings: []
      trailings: []
    extends: ~
    implements: []
    body:
      node_type: block
      statements:
        - node_type: trait_use
          traits:
            - node_type: identifier
              name: Loggable
              loc:
                start:
                  line: 2
                  column: 6
                  offset: 16
                end:
                  line: 2
                  column: 14
                  offset: 24
              leadings: []
              trailings: []
            - node_type: identifier
              name: Usable
              loc:
                start:
                  line: 2
                  column: 16
                  offset: 26
                end:
                  line: 2
                  column: 22
                  offset: 32
              leadings: []
              trailings: []
          adaptations:
            - node_type: trait_use_alias
              trait_name: ~
              method:
                node_type: identifier
                name: log
                loc:
                  start:
                    line: 3
                    column: 4
                    offset: 39
                  end:
                    line: 3
                    column: 7
                    offset: 42
                leadings: []
                trailings: []
              alias: ~
              visibility: Public
              loc:
                start:
                  line: 3
                  column: 4
                  offset: 39
                end:
                  line: 3
                  column: 11
                  offset: 46
              leadings: []
              trailings: []
            - node_type: trait_use_alias
              trait_name: ~
              method:
                node_type: identifier
                name: get
                loc:
                  start:
                    line: 4
                    column: 4
                    offset: 58
                  end:
                    line: 4
                    column: 7
                    offset: 61
                leadings: []
                trailings: []
              alias:
                node_type: identifier
                name: alias
                loc:
                  start:
                    line: 4
                    column: 19
                    offset: 73
                  end:
                    line: 4
                    column: 24
                    offset: 78
                leadings: []
                trailings: []
              visibility: Private
              loc:
                start:
                  line: 4
                  column: 4
                  offset: 58
                end:
                  line: 4
                  column: 19
                  offset: 73
              leadings: []
              trailings: []
            - node_type: trait_use_alias
              trait_name:
                node_type: identifier
                name: Loggable
                loc:
                  start:
                    line: 5
                    column: 4
                    offset: 84
                  end:
                    line: 5
                    column: 12
                    offset: 92
                leadings: []
                trailings: []
              method:
                node_type: identifier
                name: log
                loc:
                  start:
                    line: 5
                    column: 14
                    offset: 94
                  end:
                    line: 5
                    column: 17
                    offset: 97
                leadings: []
                trailings: []
              alias:
                node_type: identifier
                name: aliasLoggable
                loc:
                  start:
                    line: 5
                    column: 21
                    offset: 101
                  end:
                    line: 5
                    column: 34
                    offset: 114
                leadings: []
                trailings: []
              visibility: ~
              loc:
                start:
                  line: 5
                  column: 4
                  offset: 84
                end:
                  line: 5
                  column: 21
                  offset: 101
              leadings: []
              trailings: []
            - node_type: trait_use_precedence
              trait_name: ~
              method:
                node_type: identifier
                name: Usable
                loc:
                  start:
                    line: 6
                    column: 4
                    offset: 120
                  end:
                    line: 6
                    column: 10
                    offset: 126
                leadings: []
                trailings: []
              instead:
                node_type: identifier
                name: Loggable
                loc:
                  start:
                    line: 6
                    column: 21
                    offset: 137
                  end:
                    line: 6
                    column: 29
                    offset: 145
                leadings: []
                trailings: []
              loc:
                start:
                  line: 6
                  column: 4
                  offset: 120
                end:
                  line: 6
                  column: 21
                  offset: 137
              leadings: []
              trailings: []
            - node_type: trait_use_precedence
              trait_name:
                node_type: identifier
                name: Usable
                loc:
                  start:
                    line: 7
                    column: 4
                    offset: 151
                  end:
                    line: 7
                    column: 10
                    offset: 157
                leadings: []
                trailings: []
              method:
                node_type: identifier
                name: useResource
                loc:
                  start:
                    line: 7
                    column: 12
                    offset: 159
                  end:
                    line: 7
                    column: 23
                    offset: 170
                leadings: []
                trailings: []
              instead:
                node_type: identifier
                name: Loggable
                loc:
                  start:
                    line: 7
                    column: 34
                    offset: 181
                  end:
                    line: 7
                    column: 42
                    offset: 189
                leadings: []
                trailings: []
              loc:
                start:
                  line: 7
                  column: 4
                  offset: 151
                end:
                  line: 7
                  column: 34
                  offset: 181
              leadings: []
              trailings: []
          loc:
            start:
              line: 2
              column: 2
              offset: 12
            end:
              line: 8
              column: 2
              offset: 193
          leadings: []
          trailings: []
      loc:
        start:
          line: 1
          column: 8
          offset: 8
        end:
          line: 9
          column: 0
          offset: 195
      leadings: []
      trailings: []
    is_readonly: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 9
        column: 0
        offset: 195
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 9
    column: 0
    offset: 195
leadings: []
trailings: []
